--- a/src/D66.US2024.App/wwwroot/index.html
+++ b/src/D66.US2024.App/wwwroot/index.html
@@ -7,7 +7,8 @@
   <title>D66.US2024.App</title>
   <base href="/" />
   <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/app.min.css" />
+  <link rel="stylesheet" href="css/app.css" />
+  <link rel="stylesheet" href="css/tailwind.css" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <link href="D66.US2024.App.styles.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
