--- a/src/D66.US2024.App/wwwroot/index.html
+++ b/src/D66.US2024.App/wwwroot/index.html
@@ -29,8 +29,9 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-	<script src="_framework/blazor.webassembly.js"></script>
-	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
+		<script src="_framework/blazor.webassembly.js"></script>
+		<script src="_content/MudBlazor/MudBlazor.min.js"></script>
+		<script src="_content/Ambacht.Common.Blazor/Ambacht.Common.Blazor.js"></script>
 </body>
 
 </html>
